    been substituted and translated.
  * Ellipsize the advanced partitioner progress label so that it doesn't
    cause the window to expand.  Ideally, we'd also right-align the
    spinner and left-aligned label, but that doesn't appear to be
    possible without a custom composite widget, and putting the spinner
    to the right of a right-aligned label looks ugly.

 -- Evan Dandrea <evand@ubuntu.com>  Thu, 04 Mar 2010 09:38:44 +0000

ubiquity (2.1.30) lucid; urgency=low

  [ Mario Limonciello ]
  * Raise permissions for misc.execute calls in bin/ubiquity.
  * Don't allow oem-user-config and oem-config to both be enabled.

  [ Evan Dandrea ]
  * Move the alpha warning for the GTK+ frontend to the language page.
    It fits better there now that we have the greeter functionality.
  * Push handling the progress bar when on the partitioning page
    properly into ubi-partman.
  * Show the advanced partitioning page immediately, now that its
    progress is displayed in the window contents (LP: #336751).

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Wed, 03 Mar 2010 19:40:15 -0600

ubiquity (2.1.29) lucid; urgency=low

  [ Evan Dandrea ]
  * Align description labels to the top left on the user-setup page and get
    rid of the width request (LP: #524827).
  * Fix references to create_label and allow_change_step in the KDE
    frontend's PartMan module (LP: #527932).
  * str.split returns a list of one empty string when splitting on an
    empty string.
  * Update the KDE frontend with the new slideshow location (as of
    ubiquity-slideshow 15).
  * The timezone is perfectly usable at half its width and height, so
    only request that.  This also means we're not trying to guess how
    much space we can reasonably take up with the map, but rather
    letting the rest of the interface determine the width and height of
    the installer window.
  * If the screen resolution is particularly low (< 600px height), allow